@@ -58,7 +58,8 @@ static gcd_test integer_gcd_tests[] = {
 	{ "101611479673163974026724715741235467160607959655653420075620", "533177863832047932237026621580126811198495699416238676294977", "1" },
 	{ "30729415811", "323233683197", "31071199" },
 	{ "77874422", "32223899", "1" },
-	{ "974507656412513757857315037382926980395082974811562770185617915360", "-1539496810360685510909469177732386446833404488164283", "1" }
+	{ "974507656412513757857315037382926980395082974811562770185617915360", "-1539496810360685510909469177732386446833404488164283", "1" },
+	{ "2823618260546496405819033080103700734250203999069672146446", "18374686479688400895", "1" }
 };
 
 DO_BINOP_TEST(integer,cl_I,cl_I,gcd)
